feat: Beautified all chat messages with unified design system
- Added consistent message format: §8┃ §X§lSYSTEM §8┃ §7message

- Home system (gold), TPA (cyan), Combat (red), RTP (green)

- AuctionHouse, Sell, Worth, Order commands updated

- Progress bars for combat timer and teleport countdown

- Black glass pane borders in GUIs

- Removed SmallCaps for cleaner look